fix: increase spacing below choose amount content

--- a/src/Views/Form/Themes/Sequoia/assets/css/form.scss
+++ b/src/Views/Form/Themes/Sequoia/assets/css/form.scss
@@ -331,7 +331,7 @@ p {
 		max-width: 80%;
 		text-align: center;
 		margin-top: 30px;
-		margin-bottom: 20px;
+		margin-bottom: 25px;
 	}
 
 	// Amount Total
